# easy-dsp

./: .gitignore  Makefile  README.md  README.rst  README_PYRAMIC.txt  browser-config.h  browser-main-daemon.c  browser-wsaudio.c  browser-wsconfig.c  browserinterface.py  code-server.py  requirements.txt  setup.cfg
board_daemons/: .gitignore  Makefile  README_PYRAMIC.txt  browser-config.h  browser-main-daemon.c  browser-wsaudio.c  start.sh
easy_dsp/board_daemons/: README_PYRAMIC.txt  browser-main-daemon.c  browser-wsaudio.c
easy_dsp/client_daemons/: example.py  streaming.py
easy_dsp/other/: direction_of_arrival.py  record_audio.py
easy_dsp/tools/: record_audio.py
ibm/: mve.py
src/: realtime_imaging.py  streaming.py
src/tools/: .gitignore  h2py.py
