# #############################################################################
# setup.cfg
# =========
# Author : Sepand KASHANI [kashani.sepand@gmail.com]
# #############################################################################

[metadata]
name = easy_dsp
summary = Interface for audio acquisition from Pyramic microphone array.
long_description = file:README.md
long_description_content_type = text/x-rst; charset=UTF-8
author = Basile BRUNEAU, Eric BEZZAM, Robin SCHEIBLER, Sahand KASHANI, Sepand KASHANI
author_email = kashani.sepand@gmail.com
url = https://github.com/sahandKashani/easy-dsp
download_url = https://github.com/sahandKashani/easy-dsp
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL License
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
license = GPL

[options]
include_package_data = True
python_requires = >=3.6
zip_safe = True
